--- a/dev-ops/cloud-init-web.tpl.yaml
+++ b/dev-ops/cloud-init-web.tpl.yaml
@@ -1,21 +1,21 @@
 #cloud-config
-package_update: false
+
+apt:
+  sources:
+    docker.list:
+      source: deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable
+      keyid: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
+
+package_update: true
 package_upgrade: true
+
 packages:
   - git
   - curl
   - ca-certificates
   - gnupg
-
-runcmd:
-  - install -m 0755 -d /etc/apt/keyrings
-  - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg
-  - chmod a+r /etc/apt/keyrings/docker.gpg
-  - echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | tee /etc/apt/sources.list.d/docker.list > /dev/null
-  - apt-get update -y
-  - apt-get install -y docker-ce docker-ce-cli containerd.io docker-buildx-plugin
-  - systemctl start docker
-  - systemctl enable docker
+  - docker-ce
+  - docker-ce-cli
 
 # create the docker group
 groups:
