cloud-init-web.tpl.yaml: pass docker gpg key ID from variable

--- a/dev-ops/cloud-init-web.tpl.yaml
+++ b/dev-ops/cloud-init-web.tpl.yaml
@@ -4,7 +4,7 @@ apt:
   sources:
     docker.list:
       source: deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable
-      keyid: 9DC858229FC7DD38854AE2D88D81803C0EBFCD88
+      keyid: ${docker_gpg_key_id}
 
 package_update: true
 package_upgrade: true
