--- a/dev-ops/cloud-init-web.tpl.yaml
+++ b/dev-ops/cloud-init-web.tpl.yaml
@@ -25,3 +25,7 @@ groups:
 system_info:
   default_user:
     groups: [docker]
+
+runcmd:
+  - docker login --username ${container_registry_user_name} --password ${container_registry_password}
+  - docker pull ${container_image_name}
