--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,17 @@
 #!/usr/bin/env bash
 # shellcheck disable=2034,2209,2135,2155
 
-# Replace with name of your environment filename
-ENV_FILENAME=.env.example
+# This is the name of the environment file that is passed to docker. Ensure it is an absolute path.
+ENV_FILENAME=/home/project/.env.example
+TF_VAR_ENV_FILENAME=${ENV_FILENAME}
+
+# This file - in production, we will parse this file to remove all comments and substitute all interpolated values.
+ENV_FILENAME_RAW=/home/project/.env.example
+TF_VAR_ENV_FILENAME_RAW=${ENV_FILENAME_RAW}
+
+# When this file is parsed, we will store the result here.
+ENV_FILENAME_INTERMEDIATE=${ENV_FILENAME_RAW}.n
+TF_VAR_ENV_FILENAME_INTERMEDIATE=${ENV_FILENAME_INTERMEDIATE}
 
 MIX_ENV=dev
 PHX_SERVER=true
@@ -14,30 +23,33 @@ HTTP_SSL=
 ################################# BUILD ##################################
 
 AWS_REGION=
-TF_VAR_aws_region=${AWS_REGION}
+TF_VAR_AWS_REGION=${AWS_REGION}
 
 AWS_ACCESS_KEY_ID=
-TF_VAR_aws_access_key_id=${AWS_ACCESS_KEY_ID}
+TF_VAR_AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}ENV_FILENAME_RAW
 
 AWS_SECRET_ACCESS_KEY=
-TF_VAR_aws_secret_access_key=${AWS_SECRET_ACCESS_KEY}
+TF_VAR_AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
 
 DOCKER_GPG_KEY_ID=9DC858229FC7DD38854AE2D88D81803C0EBFCD88
-TF_VAR_docker_gpg_key_id=${DOCKER_GPG_KEY_ID}
+TF_VAR_DOCKER_GPG_KEY_ID=${DOCKER_GPG_KEY_ID}
 
 CONTAINER_REGISTRY_USER_NAME=
-TF_VAR_container_registry_user_name=${CONTAINER_REGISTRY_USER_NAME}
+TF_VAR_CONTAINER_REGISTRY_USER_NAME=${CONTAINER_REGISTRY_USER_NAME}
 
 CONTAINER_REGISTRY_PASSWORD=
-TF_VAR_container_registry_password=${CONTAINER_REGISTRY_PASSWORD}
+TF_VAR_CONTAINER_REGISTRY_PASSWORD=${CONTAINER_REGISTRY_PASSWORD}
 
 CONTAINER_IMAGE_NAME=samba6/kanmii:elixir-phx-terraform-dev
-TF_VAR_container_image_name=${CONTAINER_IMAGE_NAME}
+TF_VAR_CONTAINER_IMAGE_NAME=${CONTAINER_IMAGE_NAME}
 
 ################################# END BUILD #################################
 
 ################################# RUN DEPLOYMENT #############################
 
-CONTAINER_NAME=elixir-phx-terraform
+CONTAINER_NAME=elixir-phx-terraform-dev
+TF_VAR_CONTAINER_NAME=${CONTAINER_NAME}
+
+DOCKER_PUBLISHED_PORT=80
 
 ################################# END RUN DEPLOYMENT #########################
