--- a/dev-ops/terraform/cloud-init-web.tpl.yaml
+++ b/dev-ops/terraform/cloud-init-web.tpl.yaml
@@ -4,7 +4,7 @@ apt:
   sources:
     docker.list:
       source: deb [arch=amd64] https://download.docker.com/linux/ubuntu jammy stable
-      keyid: ${docker_gpg_key_id}
+      keyid: ${DOCKER_GPG_KEY_ID}
 
 package_update: true
 package_upgrade: true
@@ -29,5 +29,6 @@ system_info:
 runcmd:
   - curl -o /usr/bin/p-env https://raw.githubusercontent.com/humpangle/dotfiles/master/scripts/p-env
   - chmod 755 /usr/bin/p-env
-  - docker login --username ${container_registry_user_name} --password ${container_registry_password}
-  - docker pull ${container_image_name}
+  - docker login --username ${CONTAINER_REGISTRY_USER_NAME} --password ${CONTAINER_REGISTRY_PASSWORD}
+  - docker pull ${CONTAINER_IMAGE_NAME}
+  - su -c 'mkdir ${APP_ROOT}' - ubuntu
