--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 USER_HOME=/some_path
 
 APP_DEPLOY_ROOT=${USER_HOME}/elixir-phoenix-terraform
-TF_VAR_APP_ROOT=${APP_DEPLOY_ROOT}
+TF_VAR_APP_DEPLOY_ROOT=${APP_DEPLOY_ROOT}
 
 # This is the name of the environment file that is passed to docker. Ensure it is an absolute path.
 ENV_FILENAME=${APP_DEPLOY_ROOT}/.env
@@ -20,7 +20,7 @@ TF_VAR_ENV_FILENAME_RAW=${ENV_FILENAME_RAW}
 # environments and the names might clash. So we create this file as a temporary location and then copy it to the deployment directory
 # as `.env` (assuming deployment directory will be different for different deployments).
 ENV_FILENAME_TEMPORARY=${ENV_FILENAME_RAW}.n
-TF_VAR_ENV_FILENAME_INTERMEDIATE=${ENV_FILENAME_TEMPORARY}
+TF_VAR_ENV_FILENAME_TEMPORARY=${ENV_FILENAME_TEMPORARY}
 
 MIX_ENV=dev
 PHX_SERVER=true
@@ -29,6 +29,7 @@ PHX_HOST=localhost
 HTTP_SSL=
 
 PORT=80
+TF_VAR_PORT=${PORT}
 
 ################################# BUILD ##################################
 
@@ -57,9 +58,13 @@ TF_VAR_CONTAINER_IMAGE_NAME=${CONTAINER_IMAGE_NAME}
 
 ################################# RUN DEPLOYMENT #############################
 
+HOST_NAME=production
+TF_VAR_HOST_NAME=${HOST_NAME}
+
 CONTAINER_NAME=elixir-phx-terraform-dev
 TF_VAR_CONTAINER_NAME=${CONTAINER_NAME}
 
 DOCKER_PUBLISHED_SERVER_LISTEN_PORT=80
+TF_VAR_DOCKER_PUBLISHED_SERVER_LISTEN_PORT=${DOCKER_PUBLISHED_SERVER_LISTEN_PORT}
 
 ################################# END RUN DEPLOYMENT #########################
