Let ansible wait for connection before running principal play

--- a/dev-ops/terraform/ansible-templates/deploy.tpl.yaml
+++ b/dev-ops/terraform/ansible-templates/deploy.tpl.yaml
@@ -1,3 +1,12 @@
+- name: Wait for connection and gather facts
+  hosts: all
+  tasks:
+    - name: "Wait for connection"
+      ansible.builtin.wait_for_connection:
+
+    - name: Gather facts for the first time
+      ansible.builtin.setup:
+
 - name: Run docker
   hosts: web_servers
   become: true
