Format .env.example to 120 lines width

--- a/.env.example
+++ b/.env.example
@@ -14,11 +14,11 @@ TF_VAR_ENV_FILENAME=${ENV_FILENAME}
 ENV_FILENAME_RAW=${APP_DEPLOY_ROOT}/.env.example
 TF_VAR_ENV_FILENAME_RAW=${ENV_FILENAME_RAW}
 
-# This file - in deployment, will be parsed file to remove all comments and substitute all interpolated values to present it in a way
-# that docker can consume. This is the file that will eventually be written as `ENV_FILENAME`.
-# Why does this file exist?. We probably could have named this file `.env` and be done with it. But we may be building for different
-# environments and the names might clash. So we create this file as a temporary location and then copy it to the deployment directory
-# as `.env` (assuming deployment directory will be different for different deployments).
+# This file - in deployment, will be parsed file to remove all comments and substitute all interpolated values to
+# present it in a way that docker can consume. This is the file that will eventually be written as `ENV_FILENAME`.
+# Why does this file exist?. We probably could have named this file `.env` and be done with it. But we may be building
+# for different environments and the names might clash. So we create this file as a temporary location and then copy it
+# to the deployment directory as `.env` (assuming deployment directory will be different for different deployments).
 ENV_FILENAME_TEMPORARY=${ENV_FILENAME_RAW}.n
 TF_VAR_ENV_FILENAME_TEMPORARY=${ENV_FILENAME_TEMPORARY}
 
