Terraform: prefer profile over access keys in aws provider args
Best practice is to access key is no where near terraform
configuration codes.

--- a/.env.example
+++ b/.env.example
@@ -52,11 +52,8 @@ LOCAL_CERT_PORT=
 AWS_REGION=
 TF_VAR_AWS_REGION=${AWS_REGION}
 
-AWS_ACCESS_KEY_ID=
-TF_VAR_AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
-
-AWS_SECRET_ACCESS_KEY=
-TF_VAR_AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
+AWS_PROFILE=
+TF_VAR_AWS_PROFILE=${AWS_PROFILE}
 
 DOCKER_GPG_KEY_ID=9DC858229FC7DD38854AE2D88D81803C0EBFCD88
 TF_VAR_DOCKER_GPG_KEY_ID=${DOCKER_GPG_KEY_ID}
