Use terraform to provision different environments e.g. staging/prod

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@
 # shellcheck disable=2034,2209,2135,2155
 
 PROJECT_NAME=ept_staging
+TF_VAR_PROJECT_NAME=${PROJECT_NAME}
 
 USER_HOME=/some_path
 
@@ -13,7 +14,7 @@ ENV_FILENAME=${APP_DEPLOY_ROOT}/.env
 TF_VAR_ENV_FILENAME=${ENV_FILENAME}
 
 # This file
-ENV_FILENAME_RAW=${APP_DEPLOY_ROOT}/.env.example
+ENV_FILENAME_RAW=${PWD}/.env.example
 TF_VAR_ENV_FILENAME_RAW=${ENV_FILENAME_RAW}
 
 # This file - in deployment, will be parsed to remove all comments and substitute all interpolated values to
@@ -47,6 +48,23 @@ CERT_MODE=production
 # Only required for local cert mode
 LOCAL_CERT_PORT=
 
+################################# INFRA ##################################
+
+TERRAFORM_ENVIRONMENT=prod
+# TERRAFORM_ENVIRONMENT=staging
+TF_VAR_TERRAFORM_ENVIRONMENT=${TERRAFORM_ENVIRONMENT}
+
+DEV_OPS_ROOT=${PWD}/dev-ops
+TF_VAR_DEV_OPS_ROOT=${DEV_OPS_ROOT}
+
+DEV_OPS_ROOT_TERRAFORM=${DEV_OPS_ROOT}/terraform
+TF_VAR_DEV_OPS_ROOT_TERRAFORM=${DEV_OPS_ROOT_TERRAFORM}
+
+DEV_OPS_ROOT_ANSIBLE=${DEV_OPS_ROOT}/ansible
+TF_VAR_DEV_OPS_ROOT_ANSIBLE=${DEV_OPS_ROOT_ANSIBLE}
+
+################################# /END INFRA ##################################
+
 ################################# BUILD ##################################
 
 AWS_REGION=
@@ -64,7 +82,7 @@ TF_VAR_CONTAINER_REGISTRY_USER_NAME=${CONTAINER_REGISTRY_USER_NAME}
 CONTAINER_REGISTRY_PASSWORD=
 TF_VAR_CONTAINER_REGISTRY_PASSWORD=${CONTAINER_REGISTRY_PASSWORD}
 
-CONTAINER_IMAGE_NAME=samba6/kanmii:elixir-phx-terraform-dev
+CONTAINER_IMAGE_NAME=samba6/kanmii:elixir-phx-terraform-${PROJECT_NAME}
 TF_VAR_CONTAINER_IMAGE_NAME=${CONTAINER_IMAGE_NAME}
 
 ################################# END BUILD #################################
@@ -74,7 +92,7 @@ TF_VAR_CONTAINER_IMAGE_NAME=${CONTAINER_IMAGE_NAME}
 HOST_NAME=production
 TF_VAR_HOST_NAME=${HOST_NAME}
 
-CONTAINER_NAME=elixir-phx-terraform-dev
+CONTAINER_NAME=elixir-phx-terraform-${PROJECT_NAME}
 TF_VAR_CONTAINER_NAME=${CONTAINER_NAME}
 
 DOCKER_PUBLISHED_SERVER_LISTEN_PORT=80
